<resources>
    <string name="notify_channel_id" translatable="false">General</string>
    <string name="app_name">Expro99 Manager</string>
    <string name="copyright">Expro99 Manager 2025</string>
    <string name="exit_tap_twice">Tap twice to exit</string>
    <string name="no_data">No records found</string>
    <string name="whoops_something_went_wrong">Whoops something went wrong!</string>
    <string name="new_notification">You received a new notification.</string>
    <string name="search_hint">Search</string>
    <string name="copied">Copied to clipboard</string>
    <string name="common_okay">Okay</string>
    <string name="session_expired_title">Session Expired</string>
    <string name="session_expired_desc">Your session has expired. Please log in again</string>
    <string name="session_expired_okay">Okay</string>
    <string name="splash_version_title">Upgrade to latest?</string>
    <string name="splash_version_desc">Current version v%s\nPlease install the lastest version v%s</string>
    <string name="splash_version_confirm">Confirm</string>
    <string name="splash_version_cancel">Skip</string>
    <string name="onboarding_change_language">Change language</string>
    <string name="onboarding_login">Login</string>
    <string name="login_title">Login</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgot_password">Forgot Password？</string>
    <string name="login_button">Login</string>
    <string name="login_invalid_credentials">Invalid username or password</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_desc">Password reset can only be done by admin.\nPlease contact admin for assistance.</string>
    <string name="forgot_password_okay">Okay</string>
    <string name="dashboard_balance">Shop Total Income</string>
    <string name="dashboard_capital">Shop Capital</string>
    <string name="dashboard_shop_count">Shop</string>
    <string name="dashboard_search_hint">Shop or username</string>
    <string name="dashboard_point_history">POINT History</string>
    <string name="dashboard_point_go">GO ></string>
    <string name="dashboard_point_all">View all orders</string>
    <string name="dashboard_shop_management">Shop Management</string>
    <string name="dashboard_shop_management_all">View All Shops</string>
    <string name="dashboard_shop_management_desc">View and manage shops</string>
    <string name="dashboard_user_management">User Management</string>
    <string name="dashboard_user_management_user">View and manage users</string>
    <string name="dashboard_notification">Notifications</string>
    <string name="dashboard_notification_all">View All</string>
    <string name="dashboard_system_log">System Log</string>
    <string name="dashboard_yxi_log">Game Log</string>
    <string name="dashboard_qr_scan">QR Scan</string>
    <string name="dashboard_profile_settings">Profile Settings</string>
    <string name="dashboard_search_title">Search Result</string>
    <string name="dashboard_search_filter_all">All</string>
    <string name="dashboard_search_filter_member">User</string>
    <string name="dashboard_search_filter_shop">Shop</string>
    <string name="dashboard_search_no_result_template">No records found related to %s</string>
    <string name="dashboard_search_no_result_desc">Please try another keyword</string>
    <string name="dashboard_search_result_count">\'%s\' - %d Result(s)</string>
    <string name="notification_title">Notification</string>
    <string name="notification_latest">Latest</string>
    <string name="notification_today">Today</string>
    <string name="notification_yesterday">Yesterday</string>
    <string name="notification_earlier">Earlier</string>
    <string name="notification_details_current_version">Current version : v.%s_%s</string>
    <string name="notification_details_latest_version">You already have the latest version</string>
    <string name="profile_settings_title">Profile Settings</string>
    <string name="profile_settings_shop_management">Shop Management</string>
    <string name="profile_settings_change_password">Change Password</string>
    <string name="profile_settings_logout">Logout</string>
    <string name="profile_settings_logout_title">Confirm Logout?</string>
    <string name="profile_settings_logout_confirm">Confirm</string>
    <string name="profile_settings_logout_cancel">Cancel</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_password_hint_old">Enter old password</string>
    <string name="change_password_hint_new">Enter new password</string>
    <string name="change_password_hint_confirm">Re-enter new password</string>
    <string name="change_password_mismatch">New and confirm password do not match</string>
    <string name="change_password_success">Password updated!</string>
    <string name="change_password_submit">Submit</string>
    <string name="profile_language_settings">Language Settings</string>
    <string name="shop_list_title">Shop</string>
    <string name="shop_list_hint_search">Search shop name, username or shop country area</string>
    <string name="shop_list_tab_all">All</string>
    <string name="shop_list_tab_active">Active</string>
    <string name="shop_list_tab_closed">Closed</string>
    <string name="shop_list_registered_user">User(s)</string>
    <string name="shop_list_yxi">Game(s)</string>
    <string name="shop_list_balance">Cash</string>
    <string name="shop_list_income">Income</string>
    <string name="shop_details_title">Shop Details</string>
    <string name="shop_details_settlement_success">Shop settlement success!</string>
    <string name="shop_details_status_updated">Shop status is updated!</string>
    <string name="shop_details_country">Location</string>
    <string name="shop_details_password">Password</string>
    <string name="shop_details_shop_username">Username</string>
    <string name="shop_details_opening_balance">Opening Balance</string>
    <string name="shop_details_current_balance">Current Balance</string>
    <string name="shop_details_status">Status</string>
    <string name="shop_details_settlement">Shop Settlement</string>
    <string name="shop_details_change_password">Change Shop Password</string>
    <string name="shop_details_change_balance">Change Shop Balance</string>
    <string name="shop_details_transactions">Shop\'s Transactions</string>
    <string name="shop_details_permissions">Permission Settings</string>
    <string name="shop_new_title">Add New Shop</string>
    <string name="shop_new_country">Country:</string>
    <string name="shop_new_state">State:</string>
    <string name="shop_new_area">Area:</string>
    <string name="shop_new_choose_country">Choose country</string>
    <string name="shop_new_choose_state">Choose state</string>
    <string name="shop_new_choose_area">Choose area</string>
    <string name="shop_new_hint_name">Enter shop name</string>
    <string name="shop_new_hint_username">Enter shop username</string>
    <string name="shop_new_hint_password">Enter shop password</string>
    <string name="shop_new_hint_amount">Amount</string>
    <string name="shop_new_choose_country_first">Please choose country first</string>
    <string name="shop_new_choose_state_first">Please choose state first</string>
    <string name="shop_new_submit">Submit</string>
    <string name="shop_new_success_title">New shop added Successfully</string>
    <string name="shop_new_success_desc">New shop is ready now</string>
    <string name="shop_new_success_back">Back to Shop Management</string>
    <string name="shop_balance_title">Modify Amount</string>
    <string name="shop_balance_current">Current Balance</string>
    <string name="shop_balance_existing_settings">Amount Settings</string>
    <string name="shop_balance_modify">Modify Amount</string>
    <string name="shop_balance_settings">Amount Settings</string>
    <string name="shop_balance_amount_settings_chosen">Amount settings :  RM %s</string>
    <string name="shop_balance_min_settings">Minimum Amount Alert</string>
    <string name="shop_balance_100">RM100</string>
    <string name="shop_balance_200">RM200</string>
    <string name="shop_balance_2000">RM2000</string>
    <string name="shop_balance_5000">RM5000</string>
    <string name="shop_balance_update">Update Settings</string>
    <string name="shop_balance_update_success">Amount settings updated successfully!</string>
    <string name="shop_change_password_title">Change Shop Password</string>
    <string name="shop_change_password_new_hint">Enter new password</string>
    <string name="shop_change_password_confirm_hint">Enter new password again</string>
    <string name="shop_change_password_mismatch">New and confirm password do not match</string>
    <string name="shop_change_password_updated">Shop password has been updated!</string>
    <string name="shop_change_password_submit">Submit</string>
    <string name="shop_transaction_title">Shop\'s Transaction</string>
    <string name="shop_transaction_type_all">All</string>
    <string name="shop_transaction_type_top_up">User Top Up</string>
    <string name="shop_transaction_type_withdraw">User Withdraw</string>
    <string name="shop_transaction_type_manager_settlement">Manager Settlement</string>
    <string name="shop_transaction_type_manager_top_up">Manager Top Up</string>
    <string name="shop_transaction_details_title">Transaction Details</string>
    <string name="shop_transaction_details_date">Transaction Date</string>
    <string name="shop_transaction_details_id">Account ID</string>
    <string name="shop_transaction_details_phone">Phone Number</string>
    <string name="shop_transaction_details_player">Player ID</string>
    <string name="shop_transaction_details_manager">Manager</string>
    <string name="shop_transaction_details_method">Payment Method</string>
    <string name="shop_transaction_details_status">Status</string>
    <string name="shop_transaction_details_remarks">Remarks</string>
    <string name="shop_permission_title">Permission Settings</string>
    <string name="shop_permission_top_up">Can top up</string>
    <string name="shop_permission_withdraw">Can withdraw</string>
    <string name="shop_permission_create_user">Can create account</string>
    <string name="shop_permission_block_user">Can block account</string>
    <string name="shop_permission_alarm">Enable/Disable alarm</string>
    <string name="shop_permission_income">Show shop\'s income</string>
    <string name="shop_permission_settlement">Show manager settlements</string>
    <string name="shop_permission_view_credentials">Show user\'s login credentials</string>
    <string name="shop_permission_withdrawal_fee">Withdrawal fee</string>
    <string name="shop_permission_updated">Shop\'s permission has been updated!</string>
    <string name="user_list_title">User</string>
    <string name="user_list_hint_search">Search shop name, username or shop country area</string>
    <string name="user_list_tab_all">All</string>
    <string name="user_list_tab_active">Active</string>
    <string name="user_list_tab_blocked">Blocked</string>
    <string name="point_filter_list_title">List Type</string>
    <string name="point_filter_transaction_title">Transaction Type</string>
    <string name="point_filter_status_title">Transaction Status</string>
    <string name="point_filter_date_title">Transaction Date</string>
    <string name="point_filter_date_choose">Choose date</string>
    <string name="point_filter_confirm">Confirm</string>
    <string name="placeholder_amount">0.00</string>
    <string name="placeholder_amount_add">+0.00</string>
    <string name="placeholder_count">0</string>
    <string name="language_english">English</string>
    <string name="cd_icon">Icon</string>
    <string name="cd_image">Image</string>
</resources>