<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="35dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="86dp"
                android:layout_gravity="center"
                android:layout_marginBottom="42dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cd_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_shop_success" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/shop_new_success_title"
                android:textColor="@color/gold_D4AF37"
                android:textSize="38sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/shop_new_success_desc"
                android:textColor="@color/gray_C2C3CB"
                android:textSize="20sp" />

            <com.dj.manager.widget.CustomButton
                android:id="@+id/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_new_success_back" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>