<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_weight="0.75"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_shop_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white_FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView_pin"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/cd_icon"
                android:padding="8dp"
                android:src="@drawable/ic_pin" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/gold_D4AF37"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/view_status"
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/textView_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white_FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/shop_list_registered_user"
            android:textColor="@color/gray_7B7B7B"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/placeholder_count"
            android:textColor="@color/white_FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/shop_list_yxi"
            android:textColor="@color/gray_7B7B7B"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_yxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/placeholder_count"
            android:textColor="@color/white_FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/shop_list_balance"
            android:textColor="@color/gray_7B7B7B"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/placeholder_amount"
            android:textColor="@color/white_FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/shop_list_income"
            android:textColor="@color/gray_7B7B7B"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/placeholder_amount_add"
            android:textColor="@color/white_FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>