<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/point_filter_list_title"
                android:textColor="@color/white_FFFFFF"
                android:textSize="20sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                app:flexWrap="wrap"
                app:justifyContent="flex_start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/point_filter_transaction_title"
                android:textColor="@color/white_FFFFFF"
                android:textSize="20sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                app:flexWrap="wrap"
                app:justifyContent="flex_start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/point_filter_status_title"
                android:textColor="@color/white_FFFFFF"
                android:textSize="20sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                app:flexWrap="wrap"
                app:justifyContent="flex_start" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/point_filter_date_title"
                android:textColor="@color/white_FFFFFF"
                android:textSize="20sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="flex_start" />

            <LinearLayout
                android:id="@+id/panel_calendar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/bg_chip"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/point_filter_date_choose"
                    android:textColor="@color/gray_C2C3CB"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/cd_icon"
                    android:src="@drawable/ic_calendar" />
            </LinearLayout>

            <com.dj.manager.widget.CustomButton
                android:id="@+id/button_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/point_filter_confirm" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>