<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="90dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/login_title"
                android:textColor="@color/white_FFFFFF"
                android:textSize="38sp" />

            <com.dj.manager.widget.RoundedEditTextView
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

            <include
                android:id="@+id/view_edit_text_password"
                layout="@layout/view_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="65dp" />

            <TextView
                android:id="@+id/textView_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginVertical="14dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login_forgot_password"
                android:textColor="@color/white_FFFFFF_50a"
                android:textSize="14sp" />

            <com.dj.manager.widget.CustomButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/onboarding_login" />

            <LinearLayout
                android:id="@+id/panel_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/onboarding_change_language"
                    android:textColor="@color/gray_7B7B7B"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/language_english"
                    android:textColor="@color/gold_D4AF37"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
