<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:orientation="vertical"
    android:paddingVertical="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="30dp">

        <ImageView
            android:id="@+id/imageView_dismiss"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_icon"
            android:src="@drawable/ic_chev_left_white" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/shop_new_choose_country"
            android:textColor="@color/white_FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_search"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/cd_icon"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/search_hint"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/white_FFFFFF"
            android:textColorHint="@color/gray_C2C3CB"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView_clear"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/cd_icon"
            android:src="@drawable/ic_cancel"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@color/black_232627" />
</LinearLayout>
